make sure new NRI logo doesn't have wrapping underneath

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -473,6 +473,7 @@ main  article > .logo-sponsor {
     float: left;
     margin-left: 0;
     margin-right: 40px !important;
+    padding-bottom: 50px;
 }
 }
 
